@@ -1,3 +1,10 @@
+2012-03-23 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-06-31
+	* Temporary disable "Import from python" option in the MenuBar. (to deploy the app.)
+	* Improvements in Jpython parser.
+	- Create nested Pset structures.
+	- Take into account the names of the Psets, update pset parameters when they exist, added when needed.
+	
 2012-03-22 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-06-30
 	* Update connection setup for Online database. (Andrea).
